still getting error

--- a/sagemaker_sklearn_custom_script.ipynb
+++ b/sagemaker_sklearn_custom_script.ipynb
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m sklearn_estimator\u001b[38;5;241m.\u001b[39mlatest_training_job\u001b[38;5;241m.\u001b[39mwait(logs\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Retrieve artifacts\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m artifact \u001b[38;5;241m=\u001b[39m\u001b[43msm_boto3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescribe_training_job\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mTrainingJobName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msklearn_estimator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlatest_training_job\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mS3ModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModel artifact persisted at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00martifact\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[29], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m sklearn_estimator\u001b[38;5;241m.\u001b[39mlatest_training_job\u001b[38;5;241m.\u001b[39mwait(logs\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Retrieve artifacts\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m artifact \u001b[38;5;241m=\u001b[39m\u001b[43msm_boto3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescribe_training_job\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mTrainingJobName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msklearn_estimator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlatest_training_job\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m)\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mS3ModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModel artifact persisted at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00martifact\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
       "File \u001b[0;32m~/miniconda3/envs/sagemaker/lib/python3.11/site-packages/botocore/client.py:565\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    561\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    562\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    563\u001b[0m     )\n\u001b[1;32m    564\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 565\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/miniconda3/envs/sagemaker/lib/python3.11/site-packages/botocore/client.py:1021\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1017\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1018\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1019\u001b[0m     )\n\u001b[1;32m   1020\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1021\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1022\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1023\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
       "\u001b[0;31mClientError\u001b[0m: An error occurred (400) when calling the DescribeTrainingJob operation: "
@@ -1503,6 +1503,114 @@
     ")['ModelArtifacts']['S3ModelArtifacts']\n",
     "\n",
     "print(f'Model artifact persisted at {artifact}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:botocore.credentials:Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SageMaker client initialized.\n",
+      "Using boto3 client with region: us-east-1\n",
+      "Waiting for training job to complete...\n",
+      "\n",
+      "2024-07-04 19:32:23 Starting - Preparing the instances for training\n",
+      "2024-07-04 19:32:23 Downloading - Downloading the training image\n",
+      "2024-07-04 19:32:23 Training - Training image download completed. Training in progress.\n",
+      "2024-07-04 19:32:23 Uploading - Uploading generated training model\n",
+      "2024-07-04 19:32:23 Completed - Training job completed\n",
+      "Training job name: RF-custom-sklearn-2024-07-04-19-29-55-060\n",
+      "Describing training job...\n",
+      "Attempt 1 - Error Code: 400, Error Message: \n",
+      "Describing training job...\n",
+      "Attempt 2 - Error Code: 400, Error Message: \n",
+      "Describing training job...\n",
+      "Attempt 3 - Error Code: 400, Error Message: \n",
+      "Maximum retry attempts reached. Exiting.\n"
+     ]
+    },
+    {
+     "ename": "ClientError",
+     "evalue": "An error occurred (400) when calling the DescribeTrainingJob operation: ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;66;03m# Retrieve the model artifacts location\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDescribing training job...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 29\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43msm_boto3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescribe_training_job\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[43m        \u001b[49m\u001b[43mTrainingJobName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtraining_job_name\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFull response from describe_training_job: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     33\u001b[0m     artifact \u001b[38;5;241m=\u001b[39m response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mS3ModelArtifacts\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/miniconda3/envs/sagemaker/lib/python3.11/site-packages/botocore/client.py:565\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    561\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    562\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    563\u001b[0m     )\n\u001b[1;32m    564\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 565\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/sagemaker/lib/python3.11/site-packages/botocore/client.py:1021\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1017\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1018\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1019\u001b[0m     )\n\u001b[1;32m   1020\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1021\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1022\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1023\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
+      "\u001b[0;31mClientError\u001b[0m: An error occurred (400) when calling the DescribeTrainingJob operation: "
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "import time\n",
+    "import botocore.exceptions\n",
+    "\n",
+    "# Explicitly set AWS session to ensure correct credentials and region\n",
+    "session = boto3.Session(region_name='us-east-1')\n",
+    "\n",
+    "# Initialize the SageMaker client\n",
+    "sm_boto3 = session.client('sagemaker')\n",
+    "print(\"SageMaker client initialized.\")\n",
+    "\n",
+    "# Print boto3 client configuration to verify\n",
+    "print(f\"Using boto3 client with region: {session.region_name}\")\n",
+    "\n",
+    "# Wait for the training job to complete\n",
+    "print(\"Waiting for training job to complete...\")\n",
+    "sklearn_estimator.latest_training_job.wait(logs=\"None\")\n",
+    "\n",
+    "# Verify the training job name\n",
+    "training_job_name = sklearn_estimator.latest_training_job.name\n",
+    "print(f\"Training job name: {training_job_name}\")\n",
+    "\n",
+    "# Retry mechanism to handle eventual consistency issues\n",
+    "retries = 3\n",
+    "for attempt in range(retries):\n",
+    "    try:\n",
+    "        # Retrieve the model artifacts location\n",
+    "        print(\"Describing training job...\")\n",
+    "        response = sm_boto3.describe_training_job(\n",
+    "            TrainingJobName=training_job_name\n",
+    "        )\n",
+    "        print(f\"Full response from describe_training_job: {response}\")\n",
+    "        artifact = response['ModelArtifacts']['S3ModelArtifacts']\n",
+    "        print(f'Model artifact persisted at {artifact}')\n",
+    "        break\n",
+    "    except botocore.exceptions.ClientError as e:\n",
+    "        error_code = e.response['Error']['Code']\n",
+    "        error_message = e.response['Error']['Message']\n",
+    "        print(f\"Attempt {attempt + 1} - Error Code: {error_code}, Error Message: {error_message}\")\n",
+    "        if attempt < retries - 1:\n",
+    "            time.sleep(10)  # Wait before retrying\n",
+    "        else:\n",
+    "            print(\"Maximum retry attempts reached. Exiting.\")\n",
+    "            raise\n",
+    "    except botocore.exceptions.BotoCoreError as e:\n",
+    "        print(f\"Attempt {attempt + 1} - BotoCoreError: {e}\")\n",
+    "        if attempt < retries - 1:\n",
+    "            time.sleep(10)  # Wait before retrying\n",
+    "        else:\n",
+    "            print(\"Maximum retry attempts reached. Exiting.\")\n",
+    "            raise\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred: {e}\")\n",
+    "        raise\n",
+    "\n",
+    "print(f'Model artifact persisted at {artifact}')\n"
    ]
   },
   {
